[develop] -- added some local changes with NodeJs server

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -312,6 +312,7 @@
   <a routerLink="home">Home</a>
   <a routerLink="aboutUs">About Us</a>
   <a routerLink="contact">Contact Us</a>
+  <a routerLink="product">Product</a>
   <a routerLink="user">User</a>
     <div class="spacer"></div>
     <!-- <a routerLink="access/register">Register</a> -->
