--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -13,26 +13,21 @@
     </ng-container>
 
     <!-- Name Column -->
-    <ng-container matColumnDef="email">
-      <th mat-header-cell *matHeaderCellDef> EMAIL </th>
-      <td mat-cell *matCellDef="let element"> {{element.email}} </td>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef> NAME </th>
+      <td mat-cell *matCellDef="let element"> {{element.name}} </td>
     </ng-container>
 
     <!-- Weight Column -->
-    <ng-container matColumnDef="first_name">
-      <th mat-header-cell *matHeaderCellDef> FIRST NAME</th>
-      <td mat-cell *matCellDef="let element"> {{element.first_name}} </td>
+    <ng-container matColumnDef="quantity">
+      <th mat-header-cell *matHeaderCellDef> QUANTITY</th>
+      <td mat-cell *matCellDef="let element"> {{element.quantity}} </td>
     </ng-container>
 
-    <ng-container matColumnDef="last_name">
-      <th mat-header-cell *matHeaderCellDef> LAST NAME </th>
-      <td mat-cell *matCellDef="let element"> {{element.last_name}} </td>
-    </ng-container>
-
-    <ng-container matColumnDef="avatar">
-      <th mat-header-cell *matHeaderCellDef> AVATAR </th>
-      <td mat-cell *matCellDef="let element"> {{element.avatar}} </td>
-    </ng-container>
+    <ng-container matColumnDef="price">
+      <th mat-header-cell *matHeaderCellDef> PRICE </th>
+      <td mat-cell *matCellDef="let element"> {{element.price}} </td>
+    </ng-container> 
 
     <ng-container matColumnDef="action">
       <th mat-header-cell *matHeaderCellDef> ACTION </th>
